kubernetes/apps/media/watchstate/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: watchstate
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
